grammar.js
      source_file: ($) =>
        seq(
          $._hoonTall,
          repeat1(seq($._Gap, $._hoonTall)),
          // choice($.sailExpression, $._hoonTall),
          // repeat(seq($._Gap, choice($._hoonTall, $.sailExpression))),
          optional($._Gap)
        ),

      // _hoonExpression: ($) => choice(
      //   $._hoonTall,
      //   $._hoonWide
      // ),
      // _hoonOrSail: ($) => choice($.sailExpression, $._hoonTall),
      _hoonTall: ($) => choice(field('runeTall', $._runeTall), field("wide", $._hoonWide), field("sail", $.sailExpression)),

      _hoonWide: $ => choice(
        field('runeWide', $._runeWide),           // First choice: _runeWide
        field('value', $._value),                 // Second choice: _value
        field('irregularForms', $._irregularForms), // Third choice: _irregularForms
      ),


      // Sail-specific runes
      // sailMiclus: ($) => seq(";+", $._Gap, $._hoonTall),
      // sailMictar: ($) => seq(";*", $._Gap, $._hoonTall),
      // sailMictis: ($) => seq(
      //   ";=",
      //   $._Gap,
      //   repeat1(seq($.sailExpression, $._Gap)),
      //   $.seriesTerminator,
      // ),
      // sailMicfas: ($) => seq(";/", $._space, $.string),

      // Modify existing rules to avoid conflicts
      wingPath: ($) =>
          seq(
            choice(
              $.lark,
              $.fullContext,
              $.name,
              $.parent,
              $.specialIndex,
              $.stripFace
            ),
            repeat1(
              seq(
                ".",
                choice(
                  $.lark,
                  $.fullContext,
                  $.name,
                  $.parent,
                  $.specialIndex,
                  $.stripFace
                )
              )
            )
          ),




      _specTall: ($) =>
  field('spec',
      choice(
        $._bucTall,
        $._specWide,
        $.cenhepTall,
        $.cenlusTall,
        seq("$;", $._Gap, $._specTall)
      )), //TODO: add all cen runes
    _specWide: ($) =>
  field('specWide',
      choice(
        $.term,
        $.aura,
        $.typeUnion,
        prec.left(
          0,
          seq(
            choice($.parent, $.name),
            repeat(
              seq(":", choice($.parent, $.name, $.number, $.cell, $.stripFace))
            )
          )
        ), // $.composeExpressions,
        alias(
          prec.left(0, seq(optional($._specWide), "=", $._specWide)),
          $.wrapFace
        ), // $.wrapFace,
        $.mold,
        $.cell,
        $.normalize,
        $._bucWide,
        seq("$;", "(", $._specWide, ")"),
        $.gateCall,
        $.cenhepWide,
        $.cenlusWide,
        // $.wrapFace2,
        $.factoryGate
)),
_wingTall: ($) => choice(
  field('wingWide', $._wingWide),
  field('tisgalTall', $.tisgalTall),
  field('tisgarTall', $.tisgarTall)
),

_wingWide: ($) =>
  choice(
    field('name', $.name),
    field('parent', $.parent),
    field('gateCall', $.gateCall),
    field('lark', $.lark),
    field('wingPath', $.wingPath),
    field('fullContext', $.fullContext),
    field('specialIndex', $.specialIndex),
    field('wrapFace', $.wrapFace),
    field('tisgalWide', $.tisgalWide),
    field('tisgarWide', $.tisgarWide),
    field('cell', $.cell)
  ),

_skinTall: ($) => choice(
  field('specTall', $._specTall),
  field('addCell', $.addCell)
),

_skinWide: ($) => choice(
  field('specWide', $._specWide),
  field('addCell', $.addCell)
),

_termTall: ($) => choice(
  field('termWide', $._termWide)
),

_termWide: ($) => choice(
  field('name', $.name),
  field('term', $.term)
),

_tomeTall: ($) => choice(
  field('tomeWide', $._tomeWide)
),

_tomeWide: ($) => choice(
  field('name', $.name)
),

_studTall: ($) => choice(
  field('studWide', $._studWide)
),

_studWide: ($) => choice(
  field('name', $.name)
),

_chumTall: ($) => choice(
  field('chumWide', $._chumWide)
),

_chumWide: ($) =>
  choice(
    seq($.term, repeat(seq(".", choice($.number, $.name))))
  ),

_valueTall: ($) => field('hoonTall', $._hoonTall),

_valueWide: ($) => field('hoonWide', $._hoonWide),

_labelTall: ($) => choice(
  field('labelWide', $._labelWide)
),

_labelWide: ($) => choice(
  field('name', $.name),
  field('term', $.term)
),

    _lusTall: ($) => choice($.luslusTall, $.lusbucTall, $.lusbarTall),

    lusbucTall: ($) =>
      seq(alias("+$", $.rune), $._Gap, field('name', $.name), $._Gap, $._specTall),
    luslusTall: ($) =>
      seq(alias("++", $.rune), $._Gap, field('armName', $.name), $._Gap, field('armBody', $._hoonTall)),

    barcenTall: ($) =>
      seq(
        alias("|%", $.rune),
        $._Gap,
        $._lusTall,
        repeat(seq($._Gap, $._lusTall)),
        $._Gap,
        $.coreTerminator
      ),
    bartisTall: ($) =>
      seq(alias("|=", $.rune), $._Gap, $._specTall, $._Gap, $._hoonTall),
    buccenTall: ($) =>
      seq(
        alias("$%", $.rune),
        $._Gap,
        repeat1(seq($._specTall, $._Gap)),
        $.seriesTerminator
      ),
    tisgarTall: ($) =>
      seq(alias("=>", $.rune), $._Gap, $._hoonTall, $._Gap, $._hoonTall),
    tisgalTall: ($) =>
      seq(alias("=<", $.rune), $._Gap, $._hoonTall, $._Gap, $._hoonTall),
    tislusTall: ($) =>
      seq(alias("=+", $.rune), $._Gap, $._hoonTall, $._Gap, $._hoonTall),
    wuthepTall: ($) =>
      seq(
        alias("?-", $.rune),
        $._Gap,
        $._wingTall,
        $._Gap,
        repeat1(seq($._specTall, $._Gap, $._valueTall, $._Gap)),
        $.seriesTerminator
      ),
    wutcolTall: ($) =>
      seq(
        alias(seq("?", ":"), $.rune),
        $._Gap,
        $._hoonTall,
        $._Gap,
        $._hoonTall,
        $._Gap,
        $._hoonTall
      ),
    bucsigWide: ($) =>
      seq(alias("$~", $.rune), "(", $._hoonWide, $._space, $._specWide, ")"),
    buctisWide: ($) =>
      seq(alias("$=", $.rune), "(", $._skinWide, $._space, $._specWide, ")"),
    dottisWide: ($) =>
      seq(alias(".=", $.rune), "(", $._hoonWide, $._space, $._hoonWide, ")"),
    rune: ($) => "感#)@!(",
      sailExpression: ($) => choice($.sailTagTall, $.sailTagWide),

      sailTagTall: ($) => seq(
        seq(";", field("tagName", $.name),
          optional(field("wideAttributes", repeat($.sailTagAttributesWide))),
          $._Gap
        ),
        optional(field("tallAttributes", repeat($.sailTagAttributesTall))),
        repeat(field("tagContent", $.sailTagContent)),
        seq(optional($._Gap), $.seriesTerminator),
      ),

      sailAttributeTall: ($) => seq("=", field("name", $.name), $._Gap, field("value", $.string)),
    wrapFace: ($) => seq($._skinWide, "=", $._hoonWide),
    gateCall: ($) =>
      seq("(", $._hoonWide, repeat(seq($._space, $._hoonWide)), ")"),
    cell: ($) =>
      prec.right(2, seq(
        optional("~"),
        "[",
        $._hoonWide,
        repeat(seq($._space, $._hoonWide)),
        "]",
        optional("~")
      )),

    mold: ($) => prec(1, choice("?", "^", "~", "*")),
    increment: ($) => seq("+", "(", $._hoonWide, ")"),
    name: ($) => choice("$", /[a-zA-Z][a-zA-Z0-9-]*/),
    // number: ($) =>
    //   prec.right(
    //     0,
    //     choice(
    //       seq(
    //         optional(choice("--", "-")),
    //         choice(
    //           seq(/[0-9]{1,3}/, repeat(seq(".", optional($._Gap), /[0-9]{3}/))), //@ud
    //           seq(
    //             /0x[0-9a-fA-F]{1,4}/,
    //             repeat(seq(".", optional($._Gap), /[0-9a-fA-F]{4}/))
    //           ), //@ux
    //           seq(/0b[01]{1,4}/, repeat(seq(".", optional($._Gap), /[01]{4}/))), //@ub
    //           /0i[0-9]+/, //@ui
    //           seq(
    //             /0v[0-9a-v]{1,5}/,
    //             repeat(seq(".", optional($._Gap), /[0-9a-v]{5}/))
    //           ), //@uv
    //           seq(
    //             /0w[0-9a-zA-Z-~]{1,5}/,
    //             repeat(seq(".", optional($._Gap), /[0-9a-zA-Z-~]{5}/))
    //           ) //@uw
    //         )
    //       ),
    //       seq(".", optional(choice("~", "~~", "~~~")), /[0-9]+(.[0-9]+)?/) //@rh,@rs,@rd,@rq
    //     )
    //   ),
    number: ($) =>
      prec.right(
        0,
        choice(
          seq(
            optional(choice("--", "-")),
            choice(
              seq(/[0-9]{1,3}/, repeat(seq(".", optional($._Gap), /[0-9]{3}/))), //@ud
              seq(
                /0x[0-9a-fA-F]{1,4}/,
                repeat(seq(".", optional($._Gap), /[0-9a-fA-F]{4}/))
              ), //@ux
              seq(/0b[01]{1,4}/, repeat(seq(".", optional($._Gap), /[01]{4}/))), //@ub
              /0i[0-9]+/, //@ui
              seq(
                /0v[0-9a-v]{1,5}/,
                repeat(seq(".", optional($._Gap), /[0-9a-v]{5}/))
              ), //@uv
              seq(
                /0w[0-9a-zA-Z-~]{1,5}/,
                repeat(seq(".", optional($._Gap), /[0-9a-zA-Z-~]{5}/))
              ) //@uw
            )
          ),
          seq(".", optional(choice("~", "~~", "~~~")), /[0-9]+(.[0-9]+)?/) //@rh,@rs,@rd,@rq
        )
      ),
    phonemic: ($) =>
      seq(
        optional("."),
        "~",
        /[bcdfghjklmnpqrstvwxz][aeiou][bcdfghjklmnpqrstvwxz][bcdfghjklmnpqrstvwxz][aeiouy][bcdfghjklmnpqrstvwxz](-[bcdfghjklmnpqrstvwxz][aeiou][bcdfghjklmnpqrstvwxz][bcdfghjklmnpqrstvwxz][aeiouy][bcdfghjklmnpqrstvwxz]){0,3}/
      ), //@q
    unicode: ($) => seq("~-~", /(\w|\.)+/),
    mold: ($) => choice("?", "^", "~", "*"),
    term: ($) =>
      choice(
        seq(
          "%",
          choice(
            $.name,
            $.number,
            $.date,
            seq("'", /[^\n']*/, "'"),
            $.knot,
            "~",
            $.ipAddress,
            $.bitcoinAddress,
            $.boolean,
            $.unicode,
            $.phonemic
          )
        )
      ),
    aura: ($) => /@[a-zA-Z]*/,
    _space: ($) => " ",
    _Gap: ($) => prec.left(repeat1(/ *\n+ *|  +/)),
    fullContext: ($) => ".",
    lark: ($) => choice("+", "-", /(([-+][<>])+)|([-+]([<>][-+])+)/),
    knot: ($) => seq("~.", /[0-9a-zA-Z~_.-]*/),
    string: ($) => choice($.tapeOrCord, $.knot),
    date: ($) =>
      seq(
        choice(
          /~[dhms]\d+(\.[dhms]\d+)*/, //day.hour.min.second
          /~\d+\.\d+\.\d+(\.(\.\d+){3})?/
        ), //year month day
        optional(/\.(\.[0-9a-f]{4})+/)
      ),
    specialIndex: ($) => seq(choice("+", "|", "&"), /[0-9]+/),

    path: ($) =>
      seq(
        optional("%"),
        choice(
          "#",
          "/",
          repeat1(
            seq(
              repeat1("/"),
              choice(
                $.name,
                $.cell,
                $.gateCall,
                $.number,
                $.tapeOrCord,
                $.knot,
                $.date
              )
            )
          )
        )
      ),
    seriesTerminator: ($) => "==",
    coreTerminator: ($) => "--",
